# financial-agent

./: .dockerignore  .gitignore  Dockerfile  GITHUB_SETUP.md  Procfile  README.md  app.py  asgi.py  pyproject.toml  railway.json  railway.toml  requirements.txt  start.sh
app/: graph.py  main.py  state.py
app/tools/: document_tool.py  sql_tools.py  web_tool.py
backend/: server.py
backend/api/: routes.py
data/: earnings.json
frontend/: package-lock.json  package.json  tsconfig.json  vercel.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: ExampleQueries.tsx  QueryForm.tsx  ResultsDisplay.tsx
