[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-agent"
version = "1.0.0"
description = "AI-powered full-stack financial analysis platform"
requires-python = ">=3.11"

dependencies = [
    "langchain",
    "langgraph",
    "langsmith",
    "openai",
    "tavily-python",
    "duckdb",
    "pandas",
    "boto3",
    "pydantic",
    "python-dotenv",
    "pypdf",
    "langchain-openai",
    "fastapi",
    "uvicorn",
    "python-multipart",
]

[tool.setuptools]
packages = ["app", "backend"]
